force-app/main/default/objects/Opportunity_VAT_Treatment__c/Opportunity_VAT_Treatment__c.object-meta.xml
<CustomObject>
    <label>Opportunity VAT Treatment</label>
    <nameField>
        <displayFormat>OVT-{000000}</displayFormat>
        <label>Opportunity VAT Treatment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity VAT Treatments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>