force-app/main/default/objects/Opportunity_VAT_Treatment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Opportunity VAT Treatments</relationshipLabel>
    <relationshipName>Opportunity_VAT_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>