force-app/main/default/objects/Opportunity_VAT_Treatment__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Rated</fullName>
            </value>
            <value>
                <fullName>Zero Rated</fullName>
            </value>
            <value>
                <fullName>Exempt with Credit</fullName>
            </value>
            <value>
                <fullName>Exempt without Credit</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
                <isActive>false</isActive>
                <label>Exempt</label>
            </value>
            <value>
                <fullName>Exempt without Credit TCC</fullName>
                <isActive>false</isActive>
                <label>Exempt without Credit TCC</label>
            </value>
            <value>
                <fullName>Exempt without Credit UDFC</fullName>
                <isActive>false</isActive>
                <label>Exempt without Credit UDFC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>